# Plug-in-ML

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  TODO.md  build.sh  install_dependencies.sh
scripts/: kill_all.py  run.py
src/agent/: CMakeLists.txt  agent.cc  agent.h  agent_gtest.cc  agent_main.cc  agent_test.cc  partition.cc  partition.h  partition_test.cc
src/channel/: CMakeLists.txt  LR_sample.py  Linear_Regression.py  R_Linear.R  boston_housing.py  channel_gtest.cc  channel_test.cc  channel_test_with_python.py  fifo.cc  fifo.h  linear_regression.py  python_test.py  shared_memory.cc  shared_memory.h  shared_memory_test.cc  sharedmemory.cc  sharedmemory.h
src/communication/: CMakeLists.txt  communicator.h  fifo_ring.cc  fifo_ring.h  fifo_ring_test.cc  zmq_communicator.cc  zmq_communicator.h  zmq_communicator_test.cc  zmq_sendrecv.cc  zmq_sendrecv.h  zmq_sendrecv_test.cc
src/master/: CMakeLists.txt  master.cc  master.h  master_main.cc  master_test.cc  task_config.cc  task_config.h  task_config_test.cc  test_process.cc
src/message/: CMakeLists.txt  message.pb.cc  message.pb.h  message.proto  message_test.cc
src/node/: agent.cc  agent.h  worker.cc  worker.h
src/server/: CMakeLists.txt  key_value_list.cc  key_value_list.h  pull_info.cc  pull_info.h  server.cc  server.h  server_gtest.cc  server_main.cc  server_test.cc
src/util/: CMakeLists.txt  common.h  logging.cc  logging.h  logging_test.cc  network_util.h
